--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Tilt+Neon&display=swap');
+
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -7,29 +11,218 @@
 } */
 
 :root {
+    --header-bar-height: 7vh;
+    --header-bar-z: 2;
+    --sub-header-z: 1;
+
+    --dark-base: #40513B;
+    --bamboo-green: #609966;
     --dark-green: #5FD068;  
+    --dark-green-contrast: #ADE792;
     --light-green: #5FD068;
+    --light-green-contrast: #EDF1D6;
     --yellow-contrast: #F5DF99;
     --background: #F6FBF4;
+    --icon-main-size: calc(35px + 1vw);
+
+    --brand-font: 'Tilt Neon', cursive;
+    --brand-font-size: calc(1rem + 1vw);
+
+    --content-font-family: 'Nunito', sans-serif;
+    --content-main-font-size: calc(0.6rem + 1vw);
+    --content-header-font-size: calc(var(--content-main-font-size) * 1.1);
+    
+}
+
+/* section#header-bar (start) !!!!!!!!!!!!!!*/
+section#header-bar { 
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: var(--header-bar-height);
+    z-index: var(--header-bar-z);
+
+    background-color: var(--dark-green);
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-areas:
+        "brand options-icons";
+    align-items: start;
+    justify-items: start;
+    padding: calc(5px + 1vw);
+
+    border-bottom: 3px solid var(--bamboo-green);
 }
 
 
-section#header-bar {
-    border: 1px solid black;
+/* div#brand (start) --------------- */
+div#brand {
+    grid-area: brand;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: calc(5px + 1vw);
+    width: max-content;
 }
 
 
-div#profile-picture, div#profile-picture-2 {
-    width: 50px;
-    height: 50px;
+img#icon-logo {
+    display: inline-block;
+    width: var(--icon-main-size);
+    height: var(--icon-main-size);
+    padding: 3px;
     border-radius: 50%;
-    border: 1px solid var(--light-green);
+    border: 1px solid var(--bamboo-green);
+    background-color: var(--dark-green-contrast);
+}
+
+h1#company-name {
+    font-size: var(--brand-font-size);
+    font-family: var(--brand-font);
+    color: var(--light-green-contrast);
+    text-shadow: 0 0 5px var(--bamboo-green);
+}
+/* div#brand (end) */
+
+/* div#options-icons (start) -----------------------*/
+div#options-icons {
+    grid-area: options-icons;
+    display: flex;
+    gap: calc(5px + 1vw);
+    width: max-content;
+    justify-self: end;
+}
+
+div#options-icons button { /* buttons*/
+    width: var(--icon-main-size);
+    height: var(--icon-main-size);
+
+    padding: 5px;
+    border: 1px solid var(--yellow-contrast);
+    border-radius: 50%;
+    font-size: var(--brand-font-size);
+    background-color: var(--bamboo-green);
+    color: var(--yellow-contrast);
+    text-shadow: 0 0 3px var(--dark-base); 
+}
+/* div#options-icons (end)*/
+/* section#header-bar (end)*/
+
+
+/* div#sub-header (start) !!!!!!!!!!!!!*/
+section#sub-header { 
+    width: 100%;
+    background-color: var(--dark-green);
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-areas:
+        "profiler actions";
+    align-items: start;
+    justify-items: start;
+    padding: 5px;
+    padding: calc(5px + 1vw);
+    z-index: var(--sub-header-z);
+    padding-top: calc(var(--header-bar-height) + 10px);
+}
+
+/* div#profiler (start) --------------------- */
+div#profiler {
+    grid-area: profiler;
+    width: 100%;
+    
+    display: flex;
+    gap: 10px;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+
+div#profile-picture {
+    width: calc(var(--icon-main-size) * 1.3);
+    height: calc(var(--icon-main-size) * 1.3);
+    border-radius: 50%;
+    border: 1px solid var(--yellow-contrast);
     background-image: url("./images/profile.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     filter: brightness(110%);
 } 
+
+div#user-detail {
+    min-width: max-content;
+    width: calc(60% + 2vw);
+    padding: 5px;
+    min-height: calc(var(--icon-main-size) * 1.3);
+    background-color: var(--light-green-contrast);
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 1px;
+    border: 1px solid var(--yellow-contrast);
+}
+
+div#user-detail h2 {
+    font-size: var(--content-header-font-size);
+    font-family: var(--content-font-family);
+    display: inline-block;
+}
+
+div#user-detail h3 {
+    font-size: var(--content-main-font-size);
+    font-family: var(--content-font-family);
+    display: inline-block;
+}
+
+div#user-detail h3 {
+    grid-column: 1/3;
+}
+/* div#profiler (start) */
+
+/* div#actions (start) ---------------------- */
+div#actions {
+    grid-area: actions;
+    justify-self: end;
+}
+
+ul#action-buttons {
+    list-style-type: none;
+    display: flex;
+    gap: calc(5px + 1vw);
+    flex-wrap: wrap;
+}
+
+ul#action-buttons button {
+    width: var(--icon-main-size);
+    height: calc(var(--icon-main-size) * 1.3);
+    padding: 5px 1px;
+    border: 1px solid var(--yellow-contrast);
+    border-radius: 5px;
+    font-size: var(--brand-font-size);
+    background-color: var(--bamboo-green);
+    color: var(--yellow-contrast);
+    text-shadow: 0 0 3px var(--dark-base);
+
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: flex-end;
+    gap: 5px;
+}
+
+ul#action-buttons button span {
+    font-size: calc(var(--brand-font-size) * 0.45);
+}
+
+/* div#actions (start) */
+
+
+
+
+
+
+
 
 div#profile-picture-2 {
     width: 100px;
@@ -54,13 +247,5 @@ section#sidebar {
     border: 1px solid black;
 }
 
-img#icon-logo {
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    padding: 3px;
-    border-radius: 50%;
-    border: 10px solid var(--light-green);
-    background-color: var(--dark-green);
-} 
+ 
 
