--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: var(--content-font-family);
-    background-color: var(--background);
 }
 
 /* body {
@@ -17,6 +16,7 @@
     --header-bar-z: 2;
     --sub-header-z: 1;
     --side-bar-z: 3;
+    --content-div-height: 5.5vh;
 
     --dark-base: #40513B;
     --bamboo-green: #609966;
@@ -295,13 +295,13 @@ section#sidebar span {
 
 
 /* section#content-divider (start)*/
-
 section#content-divider {
     width: 100%;
-    display: block;
+    height: var(--content-div-height);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     top: var(--header-bar-height);
-    margin: 0 0 var(--common-margin);
-    padding-top: var(--common-margin); /* padding top is equal to bottom margin */
     background-color: var(--background);
 }
 
@@ -380,22 +380,15 @@ section#content-dash {
     padding: calc(1px + 1vw);
 }
 
-section#content-dash h4 {
-    font-size: var(--content-header-font-size);
-    margin-bottom: var(--common-margin);
+section#content-dash.offset {
+    padding-top: calc(var(--content-div-height) + calc(1px + 1vw));
 }
-
-section#content-dash p {
-    font-size: var(--content-main-font-size);
-}
-
-
-
 
 div#projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-rows: 300px;
+    grid-auto-rows: 300px;
     gap: calc(var(--common-margin) * 3);
 }
 
@@ -411,32 +404,40 @@ div#projects-grid div[data-class="project-box"] {
 }
 
 div#projects-grid div[data-class="project-box"] h4 {
+    font-size: var(--content-header-font-size);
     height: 10%;
 }
 div#projects-grid div[data-class="project-box"] div[data-detail="details"] {
-    height: 70%;
+    height: 75%;
     display: flex;
+    flex-direction: column;
 }
 
 div[data-detail="details"] p {
-    width: 50%;
-    overflow: hidden;
+    height: max-content;
+    /* flex: 1 1 30%; */
+    /* height: max-content; */
+    width: 100%;
+    font-size: calc(0.6rem + 1vw);
+    /* padding-bottom: var(--common-padding); */
+    margin-bottom: var(--common-margin);
 }
+
 div[data-detail="details"] div[data-preview="preview"] {
-    width: 50%;
-    border: var(--common-padding) solid var(--background);
+    width: 100%;
+    flex: 1;
+    /* border: var(--common-padding) solid var(--background); */
     background: url("/images/profile.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-
-
 div#projects-grid div[data-class="project-box"] div[data-action="respond"] {
-    height: 20%;
+    height: 15%;
     display: flex;
     justify-content: flex-end;
+    align-items: end;
     gap: calc(5px + 1vw);
 }
 
