--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
     --header-bar-z: 2;
     --sub-header-z: 1;
     --side-bar-z: 3;
+    --divider-z: calc(var(--header-bar-z) - 1);
+    --content-z: calc(var(--divider-z) - 1);
+
     --content-div-height: 5.5vh;
 
     --dark-base: #40513B;
@@ -303,6 +306,7 @@ section#content-divider {
     justify-content: flex-end;
     top: var(--header-bar-height);
     background-color: var(--background);
+    z-index: var(--divider-z);
 }
 
 section#content-divider.fixed {
@@ -378,11 +382,12 @@ section#content-divider button.clicked {
 /* section#content-dash (start)*/
 section#content-dash {
     padding: calc(1px + 1vw);
-    /* transition: transform 1s ease-in-out; */
+    z-index: var(--content-z);
     display: flex;
     min-width: 100vw;
     overflow: hidden;
     flex-wrap: nowrap;
+    background-color: var(--background);
 }
 
 section#content-dash > section {
@@ -390,6 +395,7 @@ section#content-dash > section {
     overflow: hidden;
     width: 100%;
     flex: 0 0 100%;
+    z-index: var(--content-z);
  
 } 
 
@@ -437,7 +443,9 @@ div#projects-grid {
 
 div#projects-grid div[data-class="project-box"] {
     padding: var(--common-padding);
-    border: 1px solid black;
+    border: 1px solid var(--bamboo-green);
+    background-color: var(--background);
+    border-radius: 5%;
     width: 100%;
     min-height: calc(150px + 1vw);
     overflow: hidden;
@@ -503,4 +511,40 @@ div#projects-grid div[data-class="project-box"] button i {
 }
 div#projects-grid div[data-class="project-box"] button span {
     width: 30%;
+}
+
+
+
+dialog.projectModal {
+    margin: auto;
+    padding: 10px;
+    max-width: 90%;
+    height: 90%;
+}
+dialog.projectModal div[data-detail="details"] {
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+}
+dialog.projectModal div[data-preview="preview"] {
+    width: 100%;
+    height: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+dialog.projectModal div[data-link] {
+    display: flex;
+    gap: 1rem;
+}
+
+dialog.projectModal div[data-link] > p {
+    width: 40%;
+    height: 20%;
+}
+
+dialog.projectModal div[data-link] > a {
+    width: 60%;
+    height: 20%;
 }
