--- a/style.css
+++ b/style.css
@@ -545,7 +545,20 @@ dialog.projectModal {
     border-radius: 10px;
     box-shadow: 0 0 5px var(--light-green);
     background-color: var(--background);
+
+    animation: 0.3s modal-show;
 }
+
+@keyframes modal-show {
+    from {
+        opacity: 0;
+        transform: scale(0.1);
+    }
+
+    to {opacity: 1;
+        transform: scale(1);
+    }
+  } 
 
 dialog.projectModal::backdrop {
     background: rgba(0, 0, 0, 0.5);
