--- a/style.css
+++ b/style.css
@@ -701,6 +701,55 @@ dialog.projectModal div[data-link] > a {
     font-size: calc(var(--content-main-font-size) * 1.2);
     height: 100%;
 }
+
+div[data-class="bar"] {
+    height: 115%;
+    max-width: 250px;
+    width: 50%;
+    border: 3px solid var(--light-green);
+    /* padding: 1px; */
+    border-radius: var(--content-main-font-size);
+    position: relative;
+    background-color: var(--light-green-contrast);
+}
+
+
+div[data-class="fill"] {
+    height: 100%;
+    border-radius: var(--content-main-font-size);
+}
+
+div[data-class="fill"].low {
+    background-color: rgb(235, 83, 83)
+}
+
+div[data-class="fill"].mid {
+    background-color: var(--yellow-dark);
+}
+
+div[data-class="fill"].high {
+    background-color: var(--dark-green-contrast);
+}
+
+div[data-class="fill"].complete {
+    background-color: var(--dark-green);
+}
+
+
+
+
+
+div[data-class="bar"] p {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    font-size: calc(var(--content-header-font-size) * 0.95);
+}
+
+
+
+
 /* Modal styling (end) */
 
 
